# go-example

./: README.md  meson.build  readme.md
src/main/: main.go  meson.build
